# Evie

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  ProjectOptions.cmake  README.md  README_dependencies.md  coverage.xml
.devcontainer/: Dockerfile  devcontainer.json
.github/: constants.env
.github/actions/install_dependencies/: action.yml
.github/workflows/: ci.yml  codeql-analysis.yml
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  EvieHelpers.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  SystemLink.cmake  Tests.cmake  VCEnvironment.cmake
configured_files/: config.hpp.in
examples/: CMakeLists.txt
examples/DanDan/: CMakeLists.txt
examples/DanDan/include/: components.hpp  dandan_system.hpp  follow_system.hpp  game_layer.hpp  physics_system.hpp  projectile_system.hpp  render.hpp
examples/DanDan/src/: game_layer.cpp  main.cpp  render.cpp
examples/Sandbox/: CMakeLists.txt
examples/Sandbox/src/: all_lighting_example.cpp  diffuse_map_example.cpp  lighting_example.cpp  main.cpp  model_example.cpp  room_example.cpp  spinning_box_example.cpp
fuzz_test/: CMakeLists.txt
include/Evie/: sample_library.hpp
include/evie/: application.h  camera.h  core.h  default_models.h  entrypoint.h  error.h  events.h  evie.h  ids.h  indices_array.h  input.h  input_manager.h  key_events.h  layer.h  logging.h  materials.h  mouse_events.h  result.h  shader.h  shader_program.h  texture.h  types.h  vertex_array.h  vertex_buffer.h  window.h  window_events.h
include/evie/ecs/: component_array.hpp  component_manager.hpp  ecs_constants.hpp  ecs_controller.h  ecs_controller.hpp  entity.hpp  entity_manager.hpp  system.hpp  system_manager.hpp  system_manager_interface.hpp  system_signature.hpp
include/evie/ecs/components/: mesh_component.hpp  transform.hpp  velocity.hpp
scripts/: run_all_lighting_example.bat  run_dan_dan.bat  run_diffuse_map_example.bat  run_lighting_example.bat  run_sandbox.bat  run_spinning_box_example.bat
shaders/: fragment_line_shader.fs  fragment_shader.fs  light_frag_diffuse_shader.fs  light_frag_model.fs  light_frag_shader.fs  light_source_frag_shader.fs  light_source_vert_shader.vs  light_vert_diffuse_shader.vs  light_vert_shader.vs  vertex_line_shader.vs  vertex_shader.vs
src/: CMakeLists.txt
src/ecs/: CMakeLists.txt  component_manager.cpp  entity_manager.cpp  system.cpp  system_manager.cpp
src/entrypoint/: CMakeLists.txt  application.cpp
src/entrypoint/.cache/clangd/index/: application.cpp.ED9C8B3B706006CE.idx
src/event_system/: CMakeLists.txt  event_manager.cpp  event_manager.h  events.h  key_event.h
src/event_system/include/event_system/: event_manager.h  events.h  key_events.h  mouse_events.h  window_events.h
src/event_system/src/: event_manager.cpp
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/logger/: CMakeLists.txt  loggers.cpp  loggers.h  logging.cpp
src/rendering/: CMakeLists.txt  camera.cpp  debug.cpp  indices_array.cpp  model.cpp  shader_program.cpp  texture.cpp  vertex_array.cpp  vertex_buffer.cpp
src/rendering/include/rendering/: camera.h  debug.h  mesh.hpp  model.hpp  shader.h  shader_program.h
src/sample_library/: CMakeLists.txt  sample_library.cpp
src/utility/: CMakeLists.txt  bitmask_operators.h
src/utility/include/utility/: bitmask_operators.h
src/window/: CMakeLists.txt  debug_layer.cpp  event_manager.cpp  glfw_window.cpp  input_manager.cpp  input_manager_impl.cpp  layer_queue.cpp  layer_stack.cpp  window.cpp
src/window/include/window/: debug_layer.h  event_manager.h  glfw_input_manager.h  glfw_window.h  input_manager_impl.h  key_events.h  layer_queue.h  layer_stack.h  mouse_events.h  window.h  window_events.h
test/: CMakeLists.txt  component_manager_tests.cpp  constexpr_tests.cpp  ecs_controller_tests.cpp  entity_manager_tests.cpp  error_tests.cpp  event_system_tests.cpp  input_manager_tests.cpp  layer_queue_tests.cpp  layer_stack_tests.cpp  result_tests.cpp  system_manager_tests.cpp  tests.cpp
